@@ -4,6 +4,8 @@
 
 \section{Changes in Version 1.0-2 (2015-xx-yy}{
   \itemize{
+    \item{\code{nodeprune(..., ids = 1)} did not prune the tree to the root
+      node. Fixed now.}
     \item{\code{predict.cforest} used \code{na.omit} instead of \code{na.pass}.}
     \item{\code{predict.party} now features new \code{perm} argument for
           permuting splits in specific variables (useful for computing
